--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Haoru Song"
-description              : "E quindi uscimmo a riveder le stelle"
+description              : "'E quindi uscimmo a riveder le stelle'"
 repository               : "SongHaoru-max/SongHaoru-max.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : |
-                     Haoru Song 
+                     Haoru Song   
                      (宋昊儒)
   avatar           : "images/profile.png"
   bio              : "PhD candidate at Fudan University"
