--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
     url: "/#-invited-talks"
 
   - title: "Teaching Experiences"
-    url: "/#-internships"
+    url: "/#-teaching-experiences"
 
   - title: "Skills"
     url: "/#-skills"
