--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Haoru Song<br>(宋昊儒)"
   avatar           : "images/profile.png"
-  bio              : "3rd-year PhD candidate at Fudan University<br>Research interest: Chemical Proteomics & Bioinformatics"
+  bio              : "3rd-year Ph.D. candidate at Fudan University<br>Research interest: Chemical Proteomics & Bioinformatics"
   location         : "Shanghai, China"
   employer         :
   pubmed           : 
