Update author avatar image in config file

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Chong Li<br>(李翀)"
-  avatar           : "images/profile.png"
+  avatar           : "images/IMG_0264.jpeg"
   bio              : "3rd-year Ph.D. candidate at Fudan University<br>Research interest: Chemical Proteomics & Bioinformatics"
   location         : "Shanghai, China"
   employer         :
